# template

./: .editorconfig  Makefile  cookiecutter.json  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/: .gitignore
{{cookiecutter.project_name}}/deploy/: Dockerfile
