[tool.poetry]
name = "template"
version = "0.1.0"
description = "Python project template"
readme = "README.md"
authors = ["Stanislav Shkitin <stanislav.shkitin@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
