[tool.poetry]
name = "template"
version = "0.1.0"
description = "Python project template"
readme = "README.md"
authors = ["Stanislav Shkitin <stanislav.shkitin@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
isort = "^5.8.0"
flake8-quotes = "^3.2.0"
pep8-naming = "^0.11.1"
flake8-string-format = "^0.3.0"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.4.0"
flake8-builtins = "^1.5.3"
flake8-print = "^4.0.0"
flake8-simplify = "^0.14.0"
flake8-class-attributes-order = "^0.1.2"
flake8-annotations-complexity = "^0.0.6"
flake8-bandit = "^2.1.2"
flake8-isort = "^4.0.0"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
